--- a/FinalApp/Base.lproj/LaunchScreen.xib
+++ b/FinalApp/Base.lproj/LaunchScreen.xib
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,36 +12,52 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2015 Sonia Nigam. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="8ie-xW-0ye">
-                    <rect key="frame" x="20" y="439" width="441" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                    <color key="textColor" red="0.58823529409999997" green="0.58823529409999997" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
+                    <rect key="frame" x="20" y="451" width="441" height="21"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="21" id="7UQ-p9-Zoc"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="9"/>
+                    <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" image="Image-1" translatesAutoresizingMaskIntoConstraints="NO" id="M5c-Ma-LL8">
                     <rect key="frame" x="-106" y="-204" width="100" height="100"/>
                 </imageView>
-                <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="loco" textAlignment="center" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="18" translatesAutoresizingMaskIntoConstraints="NO" id="kId-c2-rCX">
-                    <rect key="frame" x="20" y="200" width="441" height="79"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="66"/>
-                    <color key="textColor" red="0.58823529409999997" green="0.58823529409999997" blue="0.58823529409999997" alpha="1" colorSpace="calibratedRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="launchscreen" translatesAutoresizingMaskIntoConstraints="NO" id="721-50-lCO">
+                    <rect key="frame" x="120" y="122" width="240" height="236"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="240" id="zQf-8O-RI9"/>
+                    </constraints>
+                </imageView>
             </subviews>
-            <color key="backgroundColor" red="0.5725490196078431" green="0.0" blue="0.85882352941176465" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" red="0.58039215686274515" green="0.090196078431372548" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstAttribute="bottom" secondItem="8ie-xW-0ye" secondAttribute="bottom" constant="20" id="Kzo-t9-V3l"/>
-                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" symbolic="YES" id="MfP-vx-nX0"/>
-                <constraint firstAttribute="centerX" secondItem="8ie-xW-0ye" secondAttribute="centerX" id="ZEH-qu-HZ9"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="200" id="dYX-HH-mKr"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="leading" secondItem="8ie-xW-0ye" secondAttribute="leading" id="jTN-Sr-WYf"/>
-                <constraint firstItem="kId-c2-rCX" firstAttribute="trailing" secondItem="8ie-xW-0ye" secondAttribute="trailing" id="nbj-d2-ynU"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="centerX" secondItem="721-50-lCO" secondAttribute="centerX" id="7Rf-La-Y0i"/>
+                <constraint firstItem="721-50-lCO" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="122" id="8ru-co-7UE"/>
+                <constraint firstAttribute="trailing" secondItem="721-50-lCO" secondAttribute="trailing" constant="120" id="HSk-Aa-yqd"/>
+                <constraint firstItem="721-50-lCO" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="IxK-cm-F8q"/>
+                <constraint firstItem="721-50-lCO" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="MN8-9x-KPm"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="bottom" secondItem="iN0-l3-epB" secondAttribute="bottomMargin" id="SEr-3p-1ZY"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="721-50-lCO" secondAttribute="bottom" constant="93" id="cMp-oW-dyk"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="mo2-dc-6MZ"/>
+                <constraint firstItem="721-50-lCO" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="120" id="sz2-BN-fgv"/>
+                <constraint firstItem="8ie-xW-0ye" firstAttribute="top" secondItem="721-50-lCO" secondAttribute="bottom" constant="81" id="tj5-IT-VvG"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <variation key="default">
+                <mask key="constraints">
+                    <exclude reference="8ru-co-7UE"/>
+                    <exclude reference="HSk-Aa-yqd"/>
+                    <exclude reference="sz2-BN-fgv"/>
+                    <exclude reference="tj5-IT-VvG"/>
+                </mask>
+            </variation>
             <point key="canvasLocation" x="548" y="455"/>
         </view>
     </objects>
     <resources>
         <image name="Image-1" width="1024" height="1024"/>
+        <image name="launchscreen" width="629" height="638"/>
     </resources>
 </document>
