--- a/FinalApp/Main.storyboard
+++ b/FinalApp/Main.storyboard
@@ -52,7 +52,7 @@
                             <outlet property="delegate" destination="J6B-e6-L78" id="MfZ-Ci-3kL"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="today" id="ZMA-SH-meK" userLabel="Home" propertyAccessControl="none">
+                    <navigationItem key="navigationItem" title="24 hour summary" id="ZMA-SH-meK" userLabel="Home" propertyAccessControl="none">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="dXR-C0-0PI">
                             <connections>
                                 <segue destination="B7Y-Wn-3Eg" kind="show" identifier="segueToNewLocation" id="WSf-ll-9gx"/>
@@ -109,44 +109,57 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
                             </textView>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="64" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="guh-x2-NIm">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsSelection="NO" showsSelectionImmediatelyOnTouchBegin="NO" rowHeight="87" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="guh-x2-NIm">
                                 <rect key="frame" x="0.0" y="265" width="600" height="340"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCell" rowHeight="64" id="tdj-1t-gjf" customClass="LocationDisplayCell" customModule="FinalApp" customModuleProvider="target">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="LocationCell" rowHeight="87" id="tdj-1t-gjf" customClass="LocationDisplayCell" customModule="FinalApp" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="600" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="tdj-1t-gjf" id="oss-DC-kfb">
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7aC-o8-c6A" userLabel="Time">
-                                                    <rect key="frame" x="364" y="8" width="225" height="48"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" constant="225" id="rJt-lj-736"/>
-                                                    </constraints>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7aC-o8-c6A" userLabel="Time">
+                                                    <rect key="frame" x="367" y="20" width="225" height="48"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                                     <color key="textColor" red="0.51764705882352946" green="0.51764705882352946" blue="0.51764705882352946" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7w8-wW-c0d" userLabel="Date">
-                                                    <rect key="frame" x="8" y="8" width="48.5" height="43"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xYl-6r-W86">
+                                                    <rect key="frame" x="8" y="44" width="31" height="15"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                    <color key="textColor" red="0.56862745098039214" green="0.0" blue="0.85490196078431369" alpha="1" colorSpace="calibratedRGB"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7w8-wW-c0d" userLabel="Date">
+                                                    <rect key="frame" x="8" y="15" width="49" height="43"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                     <color key="textColor" red="0.58431372549019611" green="0.0" blue="0.8784313725490196" alpha="1" colorSpace="calibratedRGB"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="7w8-wW-c0d" firstAttribute="top" secondItem="oss-DC-kfb" secondAttribute="topMargin" id="QXz-DV-SfE"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="7w8-wW-c0d" secondAttribute="bottom" constant="5" id="RpK-dy-0KD"/>
-                                                <constraint firstItem="7aC-o8-c6A" firstAttribute="top" secondItem="oss-DC-kfb" secondAttribute="topMargin" id="ZJY-b2-qGN"/>
-                                                <constraint firstItem="7w8-wW-c0d" firstAttribute="leading" secondItem="oss-DC-kfb" secondAttribute="leadingMargin" id="h6K-hA-6at"/>
-                                                <constraint firstAttribute="trailingMargin" secondItem="7aC-o8-c6A" secondAttribute="trailing" constant="3" id="iDa-ep-FtM"/>
-                                                <constraint firstAttribute="bottomMargin" secondItem="7aC-o8-c6A" secondAttribute="bottom" constant="-0.5" id="vbL-o7-j9o"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="7aC-o8-c6A" secondAttribute="bottom" constant="10.5" id="18R-Fz-Vjs"/>
+                                                <constraint firstItem="7aC-o8-c6A" firstAttribute="top" secondItem="oss-DC-kfb" secondAttribute="topMargin" constant="12" id="8or-r5-UE7"/>
+                                                <constraint firstItem="7aC-o8-c6A" firstAttribute="trailing" secondItem="oss-DC-kfb" secondAttribute="trailingMargin" id="Hbt-UV-383"/>
+                                                <constraint firstItem="7w8-wW-c0d" firstAttribute="top" secondItem="oss-DC-kfb" secondAttribute="topMargin" constant="5" id="MKL-ag-mJf"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="xYl-6r-W86" secondAttribute="bottom" constant="19.5" id="V3h-KG-CsJ"/>
+                                                <constraint firstItem="xYl-6r-W86" firstAttribute="leading" secondItem="oss-DC-kfb" secondAttribute="leadingMargin" id="VZg-jj-O6u"/>
+                                                <constraint firstAttribute="centerY" secondItem="7w8-wW-c0d" secondAttribute="centerY" constant="6.75" id="ixg-fC-QdF"/>
+                                                <constraint firstItem="xYl-6r-W86" firstAttribute="top" secondItem="7w8-wW-c0d" secondAttribute="bottom" constant="4" id="lj8-B9-gMo"/>
+                                                <constraint firstItem="7w8-wW-c0d" firstAttribute="leading" secondItem="oss-DC-kfb" secondAttribute="leadingMargin" id="nOh-D7-DqD"/>
                                             </constraints>
+                                            <variation key="default">
+                                                <mask key="constraints">
+                                                    <exclude reference="MKL-ag-mJf"/>
+                                                    <exclude reference="V3h-KG-CsJ"/>
+                                                </mask>
+                                            </variation>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="dailyDate" destination="7w8-wW-c0d" id="QGH-AY-qoE"/>
                                             <outlet property="dailyDuration" destination="7aC-o8-c6A" id="baJ-J3-Nbs"/>
+                                            <outlet property="dailyEntryTime" destination="xYl-6r-W86" id="RKh-4P-zF1"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
